@@ -15,8 +15,8 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.006
-Acme::Ford::Prefect                            = 0.006
+Acme::Alien::DontPanic                         = 0.007
+Acme::Ford::Prefect                            = 0.007
 Acme::Ford::Prefect::FFI                       = 0.01
 Alien::Base                                    = 0.005
 Alien::bz2                                     = 0.12
@@ -58,13 +58,14 @@ Dist::Zilla::Plugin::MathInt64                 = 0.06
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::TextTabs                  = 0.03
 Dist::Zilla::PluginBundle::ACPS                = 0.28
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.54
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.56
 FFI::Util                                      = 0.07
 File::Listing::Ftpcopy                         = 0.05
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.30
 Mojolicious::Plugin::TtRenderer                = 1.53
+Photography::EV                                = 0.02
 PkgConfig                                      = 0.08420
 PlugAuth                                       = 0.26
 PlugAuth::Client                               = 0.20
